# transports

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  lefthook.yml  release-please-config.json  release-plz.toml
.config/: hakari.toml
.github/workflows/: audit.yml  ci.yml  miri.yml  release.yml
crates/core/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
crates/core/src/: config.rs  error.rs  ext.rs  lib.rs  telemetry.rs
crates/core/src/testing/: conformance.rs  mock_peer.rs  mod.rs
crates/core/tests/: config_serde.rs  error_display.rs  ext_traits.rs  pool_shape.rs  trait_shape.rs
crates/mio/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  release-plz.toml
crates/mio/benches/: recv.rs
crates/mio/crates/transport_mio/: Cargo.toml  README.md
crates/mio/crates/transport_mio/src/: lib.rs  udp.rs
crates/mio/crates/transport_mio/tests/: pool.rs
crates/mio/examples/: recv_metrics.rs
crates/mio/src/: lib.rs  pool.rs  tcp.rs  udp.rs
crates/mio/tests/: conformance.rs  poll_ready.rs  pool.rs  ready.rs  recv.rs
crates/tokio/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  release-plz.toml
crates/tokio/benches/: recv.rs
crates/tokio/crates/transport_tokio/: CHANGELOG.md  Cargo.toml  README.md
crates/tokio/crates/transport_tokio/src/: lib.rs  stats.rs  udp.rs
crates/tokio/crates/transport_tokio/tests/: conformance.rs  pool.rs  rcvbuf.rs  recvmmsg.rs
crates/tokio/examples/: recv_metrics_tokio.rs
crates/tokio/src/: lib.rs  pool.rs  stats.rs  tcp.rs  udp.rs
crates/tokio/tests/: conformance.rs  drops.rs  pool.rs  rcvbuf.rs  readiness.rs  tcp.rs
crates/transport_core/: CHANGELOG.md  Cargo.toml  README.md
crates/transport_core/src/: config.rs  ext.rs  lib.rs  pool.rs  transport.rs
crates/transport_core/src/testing/: conformance.rs  mock_peer.rs  mod.rs
crates/transport_core/tests/: config_serde.rs  error_display.rs  ext_traits.rs  mock_peer_wire.rs  trait_shape.rs
lat.md/: core.md  lat.md  mio.md  tokio.md
lat.md/.cache/: lat_init.json
src/: config.rs  ext.rs  lib.rs  transport.rs
src/testing/: conformance.rs
tests/: config_serde.rs  ext_traits.rs  pool_shape.rs
workspace-hack/: Cargo.toml
workspace-hack/src/: lib.rs
