[package]
name = "transport_core"
description = "Backend-agnostic recv-seam traits, BufferPool contract, config, and shared error for networking stacks"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false
keywords = ["networking", "transport", "trait", "buffer-pool"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Serde-derived config primitives ship as JSON/YAML/etc via caller-picked loader.
serde = { workspace = true }
# Backend + protocol crates wrap `TransportError` via `#[from]`.
thiserror = { workspace = true }
# `testing` feature pulls tokio for MockPeer sockets + fastrand for drop/jitter.
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "net",
  "time",
  "sync",
  "io-util",
  "macros",
], optional = true }
fastrand = { workspace = true, optional = true }
# `observability` feature: shared recv-counter seam + re-export. Keeps the lean
# default (serde + thiserror) for consumers that do not instrument.
observability-core = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = []
testing = ["dep:tokio", "dep:fastrand"]
observability = ["dep:observability-core", "dep:metrics"]

[dev-dependencies]
serde_json = { workspace = true }
# `#[tokio::test]` drives async trait-shape + conformance checks.
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "time",
] }
allocation-counter = { workspace = true }
