[package]
name = "transport_mio"
description = "Mio-based Transport backend built on transport-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["0x67 <69191110+0x67@users.noreply.github.com>"]
repository = "https://github.com/polaris-trade/transport-mio"
homepage = "https://github.com/polaris-trade"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = ["polaris"]

[dependencies]
transport_core = { version = "0.2.1", registry = "polaris" }
mio = { version = "1.0.4", features = ["net", "os-poll", "os-ext"] }
socket2 = { version = "0.6.4", features = ["all"] }
libc = "0.2.163"
parking_lot = "0.12.4"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
mockall = "0.15"
rstest = "0.26.1"
transport_core = { version = "0.2.1", registry = "polaris", features = [
  "testing",
] }
tokio = { version = "1.48.0", default-features = false, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "time",
] }

# High-performance release profile. See root AGENTS.md#High-Performance Rules.
# Cross-crate inlining + one codegen unit + abort-on-panic. Slower compile,
# faster runtime, smaller binary. Consumers may override in their own workspace.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
