[package]
name = "transport_tokio"
description = "Tokio backend for transport_core: DatagramSource/StreamSource recv over tokio::net with a bounded slab pool"
version = "0.3.2"
edition = "2024"
rust-version = "1.96.1"
authors = ["0x67 <69191110+0x67@users.noreply.github.com>"]
repository = "https://github.com/polaris-trade/transport-tokio"
homepage = "https://github.com/polaris-trade"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
transport_core = { git = "https://github.com/polaris-trade/transport-core", tag = "transport_core-v0.3.0" }
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
  "time",
] }
socket2 = { version = "0.6.4", features = ["all"] }
libc = "0.2.163"
parking_lot = "0.12.4"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
transport_core = { git = "https://github.com/polaris-trade/transport-core", tag = "transport_core-v0.3.0", features = [
  "testing",
] }
mockall = "0.15"
rstest = "0.26.1"
criterion = "0.8.2"
allocation-counter = "0.8.1"

[[bench]]
name = "recv"
harness = false

# High-performance release profile. See root AGENTS.md#High-Performance Rules.
# Cross-crate inlining + one codegen unit + abort-on-panic. Slower compile,
# faster runtime, smaller binary. Consumers may override in their own workspace.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
