[package]
name = "transport_tokio"
description = "Tokio backend for transport_core: DatagramSource/StreamSource recv over tokio::net with a bounded slab pool"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
transport_core = { workspace = true, features = ["observability"] }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
  "time",
] }
socket2 = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
transport_core = { workspace = true, features = ["testing"] }
mockall = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }
allocation-counter = { workspace = true }
observability = { workspace = true }

[[bench]]
name = "recv"
harness = false
