[package]
name = "transport_core"
description = "Trait contract for networking stacks: Transport, BufferPool, config, shared error"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["networking", "transport", "trait", "buffer-pool"]
categories = ["network-programming", "asynchronous"]

[lib]
path = "src/lib.rs"

[dependencies]
# Serde-derived config primitives ship as JSON/YAML/etc via caller-picked loader.
serde = { workspace = true }
# Backend + protocol crates wrap `TransportError` via `#[from]`.
thiserror = { workspace = true }
# `testing` feature pulls tokio for MockPeer sockets + fastrand for drop/jitter.
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "sync", "io-util", "macros"], optional = true }
fastrand = { version = "2.1.2", optional = true }

[features]
default = []
testing = ["dep:tokio", "dep:fastrand"]

[dev-dependencies]
serde_json = { workspace = true }
# `#[tokio::test]` drives async trait-shape + conformance checks.
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
