[package]
name = "transport_mio"
description = "Mio-based Transport backend built on transport-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
transport_core = { workspace = true }
mio = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
transport_core = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
