[package]
name = "transport_tokio"
description = "Tokio-based Transport + BufferPool backend built on transport_core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = ["polaris"]

[lib]
path = "src/lib.rs"

[dependencies]
transport_core = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
transport_core = { workspace = true, features = ["testing"] }
mockall = { workspace = true }
rstest = { workspace = true }
